--- a/css/style.css
+++ b/css/style.css
@@ -1266,6 +1266,7 @@ main {
   font-weight: 700;
   font-size: 20px;
   color: #ffe753;
+  line-height: normal;
 
   background-color: #3c3614;
   border-radius: 10px;
